<resources>
    <string name="app_name">TOEIC Exercises</string>
    <string name="Logo">Logo</string>
    <string name="Home">Trang chủ</string>
    <string name="Exam">Kiểm tra</string>
    <string name="Upgrade">Nâng cấp</string>
    <string name="Setting">Cài đặt</string>
    <string name="Intro_title">Bắt đầu chinh phục TOEIC nào!</string>
    <string name="benefit_1">Làm quen với nhiều dạng bài nghe hiểu, đọc hiểu khác nhau!</string>
    <string name="benefit_2">Ôn lại các từ vựng đã học bằng nhiều hình thức giúp người học hứng thú và nhớ lâu hơn!</string>
    <string name="benefit_3">Thử sức với nhiều đề thi thử được lựa chọn kĩ càng giúp người học đánh giá được trình độ bản thân!</string>
    <string name="Select_language">Chọn ngôn ngữ:</string>
    <string name="Start_learn">Bắt đầu học!</string>
    <string name="Exercise">Bài tập</string>
    <string name="Theory">Lí thuyết</string>
    <string name="ad1_content">Các bộ đề<font color='#ff3e3e'><b> mới nhất</b></font>\nđược cập nhật<font color='#ff3e3e'> liên tục</font></string>
    <string name="Ad">Quảng cáo</string>
    <string name="Practice">Luyện tập</string>
    <string name="Back">Trở về</string>
    <string name="Total_questions"><b>Tổng câu hỏi:</b> %d</string>
    <string name="Finished_questions"><b>Câu hỏi đã làm:</b> %d</string>
    <string name="Exactly_questions"><b>Tỉ lệ chính xác: </b>%d</string>
    <string name="Pronounce">Phát âm</string>
    <string name="Word">Từ vựng</string>
    <string name="Favorite">Ưa thích</string>
    <string name="Flashcard">Flashcard</string>
    <string name="Synonym">Từ đồng nghĩa</string>
    <string name="Word_mean_example_regex">- %s (<font color='#000000'>%s</font>)</string>
    <string name="Word_mean_regex">-> %s</string>
    <string name="Note">Sổ tay</string>
    <string name="Lock">Khóa</string>
    <string name="Exam_content_regex">%d phút - %d câu</string>
    <string name="Finish">Hoàn thành</string>
    <string name="Fast_rewind">Tua trước đó</string>
    <string name="Control_media">Điều khiển bài nghe</string>
    <string name="Fast_forward">Tua tới</string>
    <string name="Media_time_regex">%s / %s</string>
    <string name="Question_img">Ảnh câu hỏi</string>
    <string name="Question_title_regex">%d. %s</string>
    <string name="Question_answer_with_content_regex">%s. %s</string>
    <string name="Question_answer_no_content_regex">%s</string>
    <string name="db_name">vi.db</string>
    <string name="User_finished_exam_title">Nộp bài thi?</string>
    <string name="User_finished_exam_content">Bạn có chắc muốn nộp bài chứ? Bạn sẽ không thể làm bài tiếp sau khi đã nộp!</string>
    <string name="Result">Kết quả</string>
    <string name="Score_title">Điểm số:</string>
    <string name="Listen_title">Nghe:</string>
    <string name="Read_title">Đọc:</string>
    <string name="Answer_correct_regex">Trả lời đúng: %d câu</string>
    <string name="Answer_incorrect_regex">Trả lời sai / Không trả lời: %d câu</string>
    <string name="Back_to_main_screen">Quay về màn hình chính</string>
    <string name="Answer_detail">Chi tiết đáp án</string>
    <string name="Previous_question">Câu hỏi trước đó</string>
    <string name="Order_question">Câu %d</string>
    <string name="_A">A</string>
    <string name="_B">B</string>
    <string name="_C">C</string>
    <string name="_D">D</string>
    <string name="Order_question_regex">Câu %d: </string>
    <string name="Answer">Đáp án</string>
    <string name="message_is_not_supported_text_to_speech">Ngôn ngữ không hỗ trợ! Vui lòng kết nối mạng rồi thử lại!</string>
    <string name="Question">Câu hỏi</string>
    <string name="Order_question_in_list_question_regex">%d / %d</string>
    <string name="Permissions_allowed">Cấp quyền thành công!</string>
    <string name="Permissions_denied">Cấp quyền thất bại!</string>
    <string name="Exam_instruction_title">Hướng dẫn làm bài</string>
    <string name="Exam_instruction_content_regex">Part: %s - %s\n\n%s</string>
    <string name="Title">Tiêu đề</string>
    <string name="Translate_answer_title">Dịch nghĩa đáp án:</string>
    <string name="Key_title">Từ khóa:</string>
    <string name="Default_time">00:00:00</string>
    <string name="Percent">%d %%</string>
    <string name="Find_word">Tìm kiếm từ vựng...</string>
    <string name="Dont_find_word_message">Không tìm thấy từ vựng</string>
    <string name="Example_title">"Ví dụ: "</string>
    <string name="Exit_app_message">Nhấn back lần nữa để thoát ứng dụng!</string>
    <string name="Lesson_regex">Bài %d</string>
    <string name="Grammar">Ngữ pháp</string>
    <string name="Select_lesson_title">Chọn bài học:</string>
    <string name="Intro_image">Ảnh bìa</string>
    <string name="Added_favorite_word_successful">Đã thêm từ vựng yêu thích vào sổ tay!</string>
    <string name="Removed_favorite_word">Đã xóa từ vựng yêu thích khỏi sổ tay!</string>
    <string name="Add_favorite_grammar_successful">Thêm ngữ pháp yêu thích vào sổ tay thành công!</string>
    <string name="Add_favorite_grammar_failed">Thêm ngữ pháp yêu thích vào sổ tay thất bại!</string>
    <string name="Removed_favorite_grammar">Đã xóa ngữ pháp yêu thích khỏi sổ tay!</string>
    <string name="Check_internet_connection">Vui lòng kiểm tra kết nối mạng và thử lại!</string>
    <string name="_3_months">3 tháng</string>
    <string name="_80000_vnđ">80.000 vnđ</string>
    <string name="_100000_vnđ">100.000 vnđ</string>
    <string name="_20_percentages">20%</string>
    <string name="_6_months">6 tháng</string>
    <string name="_105000_vnđ">105.000 vnđ</string>
    <string name="_150000_vnđ">150.000 vnđ</string>
    <string name="_30_percentages">30%</string>
    <string name="User_evaluate">Đánh giá từ người dùng</string>
    <string name="email_title">Email:</string>
    <string name="password_title">Mật khẩu:</string>
    <string name="Edit_info">Chỉnh sửa thông tin</string>
    <string name="Evaluate_app">Đánh giá ứng dụng</string>
    <string name="Logout">Đăng xuất</string>
    <string name="Log_out">Đăng xuất</string>
    <string name="Word_note">Sổ tay từ vựng</string>
    <string name="Grammar_note">Sổ tay ngữ pháp</string>
    <string name="Dont_have_favorite_grammar">Bạn chưa có ngữ pháp yêu thích nào!</string>
    <string name="Dont_have_favorite_word">Bạn không có từ vựng yêu thích nào!</string>
    <string name="example_media_time">00:00/00:00</string>
    <string name="Login">Đăng nhập</string>
    <string name="Email_or_username">Email / Tên đăng nhập</string>
    <string name="Password">Mật khẩu</string>
    <string name="Or_login_by">Hoặc đăng nhập qua</string>
    <string name="Google">Google</string>
    <string name="Facebook">Facebook</string>
    <string name="Dont_have_account">Bạn chưa có tài khoản?</string>
    <string name="Register">Đăng kí</string>
    <string name="Email_can_not_empty">Email không được trống!</string>
    <string name="Password_can_not_empty">Mật khẩu không được trống!</string>
    <string name="Invalid_email">Email không hợp lệ!</string>
    <string name="Password_must_from_8_chars">Mật khẩu phải từ 8 kí tự trở lên!</string>
    <string name="Create_new_account">Tạo tài khoản mới</string>
    <string name="Email">Email</string>
    <string name="Confirm_password">Xác nhận mật khẩu</string>
    <string name="Username">Tên người dùng</string>
    <string name="Username_can_not_empty">Tên người dùng không được trống!</string>
    <string name="Confirm_password_not_correct">Xác nhận mật khẩu không đúng!</string>
    <string name="Register_new_account_successful">Đăng kí tài khoản mới thành công!</string>
    <string name="Login_successful">Đăng nhập thành công!</string>
    <string name="Ask_for_logout">Xác nhận đăng xuất?</string>
    <string name="Added_favorite_word_failed">Thêm từ vựng yêu thích thất bại!</string>
    <string name="Remove_favorite_word_failed">Xóa từ vựng yêu thích thất bại!</string>
    <string name="Remove_favorite_word_successful">Xóa từ vựng yêu thích thành công!</string>
    <string name="Get_favorite_word_failed">Lấy danh sách từ vựng yêu thích thất bại!</string>
    <string name="Load_data_failed">Dữ liệu bị lỗi! Vui lòng khởi động lại ứng dụng!</string>
    <string name="Unexpected_error_occurred">Có lỗi không mong muốn xảy ra!</string>
    <string name="Word_already_exists">Từ vựng đã tồn tại!</string>
    <string name="Word_not_exists">Từ vựng đã tồn tại!</string>
    <string name="level_1_description">Cơ bản</string>
    <string name="level_2_description">Thường gặp</string>
    <string name="level_3_description">Phổ biến</string>
    <string name="level_4_description">Nâng cao</string>
    <string name="Filter_by">Lọc theo:</string>
    <string name="Account_info">Thông tin tài khoản</string>
    <string name="Premium_account">Tài khoản VIP</string>
    <string name="Normal_account">Tài khoản thường</string>
    <string name="Load_user_img_failed">Hiển thị ảnh người dùng thất bại!</string>
    <string name="Load_user_img_successful">Cập nhật ảnh người dùng thành công!</string>
    <string name="Something_went_wrong_please_try_again">Có lỗi xảy ra! Vui lòng thử lại!</string>
    <string name="Input_new_name">Nhập tên mới</string>
    <string name="Input_new_email">Nhập email mới</string>
    <string name="Input_new_password">Nhập mật khẩu mới</string>
    <string name="Update">Cập nhật</string>
    <string name="Update_user_info_successful">Cập nhật thông tin người dùng thành công!</string>
    <string name="Update_user_info_failed">Cập nhật thông tin người dùng thất bại!</string>
    <string name="Select_answer">Chọn đáp án</string>
    <string name="Connect_sentence">Nối câu</string>
    <string name="Get_favorite_grammar_failed">Lấy danh sách ngữ pháp yêu thích thất bại!</string>
    <string name="Notify_locked_exam">Bài kiểm tra này đang bị khóa!</string>
    <string name="Require_user_upgrade_account">Vui lòng nâng cấp tài khoản để mở khóa toàn bộ bài kiểm tra!</string>
</resources>