<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideInset"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Upgrade"
            android:textSize="@dimen/medium_title"
            android:textColor="@color/white"
            android:fontFamily="@font/tinos_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_primary_rectangle_no_stroke_20dp_botstart_botend_corners"
            android:gravity="center"
            android:paddingVertical="15dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/benefits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>

        <me.relex.circleindicator.CircleIndicator2
            android:id="@+id/circle_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:ci_drawable="@color/primary"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/benefits"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/three_months_space"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/circle_indicator"
            app:layout_constraintEnd_toStartOf="@id/six_months_space"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_white_rectangle_primary_stroke_10dp_corners">

            <TextView
                android:id="@+id/three_months_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/_3_months"
                android:textSize="@dimen/small_title"
                android:textColor="@color/black"
                android:fontFamily="@font/tinos_bold"
                android:layout_marginTop="10dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/three_months_sale_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/three_months_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/_80000_vnđ"
                android:textSize="@dimen/small_title"
                android:textColor="@color/primary"
                android:fontFamily="@font/tinos_bold"
                android:layout_marginTop="15dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/three_months_original_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/three_months_sale_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/_100000_vnđ"
                android:textSize="@dimen/small_content"
                android:textColor="@color/black"
                android:fontFamily="@font/tinos_italic"
                android:layout_marginVertical="10dp"
                android:gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintStart_toStartOf="@id/three_months_original_value"
                app:layout_constraintTop_toTopOf="@id/three_months_original_value"
                app:layout_constraintEnd_toEndOf="@id/three_months_original_value"
                app:layout_constraintBottom_toBottomOf="@id/three_months_original_value"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_sale"
            app:layout_constraintStart_toStartOf="@id/three_months_sale_percent"
            app:layout_constraintTop_toTopOf="@id/three_months_sale_percent"
            app:layout_constraintEnd_toEndOf="@id/three_months_sale_percent"
            app:layout_constraintBottom_toBottomOf="@id/three_months_sale_percent"/>

        <TextView
            android:id="@+id/three_months_sale_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20_percentages"
            android:textSize="@dimen/smaller_content"
            android:textColor="@color/white"
            android:padding="13dp"
            app:layout_constraintStart_toEndOf="@id/three_months_space"
            app:layout_constraintEnd_toEndOf="@id/three_months_space"
            app:layout_constraintTop_toTopOf="@id/three_months_space"
            app:layout_constraintBottom_toTopOf="@id/three_months_space"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/six_months_space"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/three_months_space"
            app:layout_constraintTop_toBottomOf="@id/circle_indicator"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_white_rectangle_primary_stroke_10dp_corners">

            <TextView
                android:id="@+id/six_months_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/_6_months"
                android:textSize="@dimen/small_title"
                android:textColor="@color/black"
                android:fontFamily="@font/tinos_bold"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/six_months_sale_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/six_months_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/_105000_vnđ"
                android:textSize="@dimen/small_title"
                android:textColor="@color/primary"
                android:fontFamily="@font/tinos_bold"
                android:layout_marginTop="15dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/six_months_original_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/six_months_sale_value"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/_150000_vnđ"
                android:textSize="@dimen/small_content"
                android:textColor="@color/black"
                android:fontFamily="@font/tinos_italic"
                android:layout_marginVertical="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintStart_toStartOf="@id/six_months_original_value"
                app:layout_constraintTop_toTopOf="@id/six_months_original_value"
                app:layout_constraintEnd_toEndOf="@id/six_months_original_value"
                app:layout_constraintBottom_toBottomOf="@id/six_months_original_value"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_sale"
            app:layout_constraintStart_toStartOf="@id/six_months_sale_percent"
            app:layout_constraintTop_toTopOf="@id/six_months_sale_percent"
            app:layout_constraintEnd_toEndOf="@id/six_months_sale_percent"
            app:layout_constraintBottom_toBottomOf="@id/six_months_sale_percent"/>

        <TextView
            android:id="@+id/six_months_sale_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_30_percentages"
            android:textSize="@dimen/smaller_content"
            android:textColor="@color/white"
            android:padding="13dp"
            app:layout_constraintStart_toEndOf="@id/six_months_space"
            app:layout_constraintEnd_toEndOf="@id/six_months_space"
            app:layout_constraintTop_toTopOf="@id/six_months_space"
            app:layout_constraintBottom_toTopOf="@id/six_months_space"/>

        <TextView
            android:id="@+id/user_evaluate_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/User_evaluate"
            android:textSize="@dimen/medium_title"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/tinos_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/three_months_space"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>

        <com.yarolegovich.discretescrollview.DiscreteScrollView
            android:id="@+id/user_evaluates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:dsv_orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/item_evaluate"
            app:layout_constraintTop_toBottomOf="@id/user_evaluate_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="20dp"
            android:overScrollMode="always"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>