<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_device"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_space"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        android:background="@drawable/bg_primary_rectangle_no_stroke_20dp_botstart_botend_corners">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_left_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/Back"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tool:text="Tiêu đề"
            android:textSize="@dimen/medium_title"
            android:textColor="@color/white"
            android:fontFamily="@font/tinos_bold"
          app:layout_constraintStart_toEndOf="@id/ic_back"
            app:layout_constraintTop_toTopOf="@id/ic_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/ic_back"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_back"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:progress="30"
            android:indeterminate="false"
            android:progressDrawable="@drawable/progress_style"/>

        <TextView
            android:id="@+id/finished_questions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/progress_bar"
            app:layout_constraintTop_toBottomOf="@id/progress_bar"
            app:layout_constraintEnd_toEndOf="@id/progress_bar"
            android:layout_marginTop="20dp"
            tool:text="@string/Finished_questions"
            android:textSize="@dimen/small_title"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/exactly_questions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/progress_bar"
            app:layout_constraintTop_toBottomOf="@id/finished_questions"
            app:layout_constraintEnd_toEndOf="@id/progress_bar"
            android:layout_marginTop="10dp"
            tool:text="@string/Exactly_questions"
            android:textSize="@dimen/small_title"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>